--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
         
         <div class="d-flex mx-1 navbar-nav  mb-2 mb-lg-0">
-          <button class="btn btn-outline-success" >Zarejestruj się</button>
+          <a class="btn btn-outline-success" href="registration_page.html" role="button">Zarejestruj się</a>
         </div>
         <div class="d-flex mx-1 navbar-nav mb-2 mb-lg-0">
           <a class="btn btn-outline-primary" href="log_page.html" role="button">Zaloguj się</a>
@@ -66,7 +66,7 @@
           <h3 class="display-6 fw-bold text-body-emphasis lh-1 mb-3">Masz problem z dopięciem co miesiąc budżetu?</h3>
           <p class="lead">Jeśli tak to ta aplikacja jest właśnie dla Ciebie.</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Zarejestruj się</button>
+            <a class="btn btn-primary btn-lg px-4 me-md-2" href="registration_page.html" role="button">Zarejestruj się</a>
             <a class="btn btn-outline-secondary btn-lg px-4" href="log_page.html" role="button">Zaloguj się</a>
           </div>
         </div>
