Add-expensive-Page done

--- a/log_in_page.html
+++ b/log_in_page.html
@@ -116,16 +116,16 @@
         <div class="row">
           <div class="col-md-6 offset-md-3">
             <h3>Co chcesz teraz zrobić?</h3>
-              <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-2 mt-3" href="log_page.html" role="button" style="border-color: #cccac8 !important;"><img class="d-inline-block align-text-top" src="Zdjecia/currency-dollar.svg" alt="">
+              <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-2 mt-3" href="#" role="button" style="border-color: #cccac8 !important;"><img class="d-inline-block align-text-top" src="Zdjecia/currency-dollar.svg" alt="">
                 Dodaj przychód</a>
               <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-2" href="add_expensive.html" role="button" style="border-color: #cccac8 !important;"> <img class="d-inline-block align-text-top"  src="Zdjecia/cart-fill.svg" alt="">
                 Dodaj wydatek</a>
               <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-2" href="log_page.html" role="button" style="border-color: #cccac8 !important;"><img class="d-inline-block align-text-top"  src="Zdjecia/bar-chart-fill.svg" alt="">
                 Przeglądaj bilans</a>
-              <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-5" href="log_page.html" role="button" style="border-color: #cccac8 !important;">
+              <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-5" href="#" role="button" style="border-color: #cccac8 !important;">
                 <img class="d-inline-block align-text-top"  src="Zdjecia/tools.svg" alt="">
                 Ustawienia</a>
-              <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-2" href="log_page.html" role="button" style="border-color: #cccac8 !important;"><img class="d-inline-block align-text-top"  src="Zdjecia/box-arrow-right.svg" alt="">
+              <a class="d-flex justify-content-center gap-1 btn btn-outline-success btn-px-4 mb-2" href="index.html" role="button" style="border-color: #cccac8 !important;"><img class="d-inline-block align-text-top"  src="Zdjecia/box-arrow-right.svg" alt="">
                
                 Wyloguj się</a>
           </div>
